src/objects/tdc_tua__Optout_Data__c.object
<CustomObject>
    <fields>
        <fullName>tdc_tua__Feedback__c</fullName>
        <label>Feedback</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Selected_Field__c</fullName>
        <label>Selected Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Unsubscribe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsubscribe</label>
        <type>Checkbox</type>
    </fields>
    <label>Optout Data</label>
    <nameField>
        <label>Optout Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Optout Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>